change dist path

--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <link rel="stylesheet" type="text/css" href="dist/style.min.css">
+    <link rel="stylesheet" type="text/css" href="lib/core/LA.min.css">
+    <link rel="stylesheet" type="text/css" href="bin/css/style.css">
 
 </head>
 <body>
+    <script src="//localhost:35729/livereload.js"></script>
     
-    <script src="dist/main.min.js"></script>
+    <script src="lib/bundle.min.js"></script>
+    <script src="lib/core/LA.min.js"></script>
+    <script src="bin/js/main.js"></script>
+
 
 </body>
 </html>  
