add loading inline

--- a/fixtures/index-dist.html
+++ b/fixtures/index-dist.html
@@ -6,6 +6,13 @@
     <link rel="stylesheet" type="text/css" href="css/style.min.css">
 </head>
 <body>
+
+<!-- loading -->
+<link rel="stylesheet" href="../lib/loadings/simple-loading/loading.css?__inline=true">
+<inline src='../lib/loadings/simple-loading/loading.html' />
+<script src='../lib/loadings/simple-loading/loading.js?__inline=true'></script>
+<!-- /loading -->
+
     <script src="js/main.min.js"></script>
 </body>
 </html>  
