--- a/lib/loadings/simple-loading/loading.html
+++ b/lib/loadings/simple-loading/loading.html
@@ -1,3 +1,7 @@
-<div class="inner-content loading">
-    <div class="padding">{{text}}</div>
+<div id="loading-wrapper">
+  <div class='preload-juggle' id='loading'>
+    <div class='ball'></div>
+    <div class='ball'></div>
+    <div class='ball'></div>
+  </div>
 </div>
