--- a/fixtures/index-dist.html
+++ b/fixtures/index-dist.html
@@ -13,6 +13,6 @@
 <script src='../lib/loadings/simple-loading/loading.js?__inline=true'></script>
 <!-- /loading -->
 
-    <script src="js/main.min.js"></script>
+    <script src="js/main.min.js" id="main-script"></script>
 </body>
 </html>  
