--- a/index.html
+++ b/index.html
@@ -104,6 +104,6 @@ window.onload = function () {
     <script src="//localhost:35729/livereload.js"></script>
     <script src="lib/bundle.min.js"></script>
     <script src="lib/core/LA.min.js"></script>
-    <script src="bin/js/main.js"></script>
+    <script src="bin/js/main.js" id="main-script"></script>
 </body>
 </html>  
