--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   /*margin-left: -150px;*/
   z-index: 1000000;
   background: transparent;
+  -webkit-transition: all 1s ease-in-out;
 }
 .preload-juggle {
   width: 300px;
@@ -93,7 +94,15 @@
 </div>
 <script>
 window.onload = function () {
-  TweenMax.to('#loading-wrapper', 1, {opacity:0, display:'none', onComplete: startPage, ease: Power3.easeOut});
+  var $loadingWrapper = $('#loading-wrapper');
+  
+  $loadingWrapper.css('opacity', '0');
+
+  setTimeout(function () {
+    $loadingWrapper.css('display', 'none');
+    startPage();
+  }, 1000);
+
   function startPage () {
     LA.core.start()
   }
