--- a/fixtures/index.html
+++ b/fixtures/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
     <link rel="stylesheet" type="text/css" href="lib/core/LA.min.css">
-    <link rel="stylesheet" type="text/css" href="bin/css/style.css">
+    <link rel="stylesheet" type="text/css" href="bin/style.css">
 </head>
 <body>
 
@@ -18,6 +18,6 @@
     <script src="//localhost:35729/livereload.js"></script>
     <script src="lib/bundle.min.js"></script>
     <script src="lib/core/LA.min.js"></script>
-    <script src="bin/js/main.js" id="main-script"></script>
+    <script src="bin/main.js" id="main-script"></script>
 </body>
 </html>  
